--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,17 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Terraform state files
+terraform.tfstate
+terraform.tfstate.*
+.terraform/
+terraform/.terraform/
+*.tfplan
+*.tfplan.*
+*.tfvars
+*.tfvars.json
+
+# Crash logs
+crash.log
+crash.*.log
