Update CI workflow to exclude Dockerfile[skip-ci]
Removed Dockerfile from CI paths and fixed variable reference.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,12 +6,10 @@ on:
     paths:
       - "app/**"
       - "tests/**"
-      - "Dockerfile"
   pull_request:
     paths:
       - "app/**"
       - "tests/**"
-      - "Dockerfile"
 
 permissions:
   contents: read
@@ -49,7 +47,7 @@ jobs:
         uses: SonarSource/sonarqube-scan-action@v2
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ variables.SONAR_HOST_URL }}
+          SONAR_HOST_URL: ${{ variable.SONAR_HOST_URL }}
         with:
           args: >
             -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
