--- a/.github/workflows/Iac.yaml
+++ b/.github/workflows/Iac.yaml
@@ -40,6 +40,9 @@ jobs:
       - name: Terraform Init
         run: terraform init
 
+      - name: Terraform Format
+        run: terraform fmt -recursive
+
       - name: Terraform Format Check
         run: terraform fmt -check -recursive
 
