--- a/.github/workflows/Iac.yaml
+++ b/.github/workflows/Iac.yaml
@@ -51,6 +51,8 @@ jobs:
 
       - name: Run TFLint
         uses: terraform-linters/setup-tflint@v4
+        with:
+          severity: HIGH,CRITICAL
 
       - name: TFLint Scan
         run: |
