--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -75,6 +75,7 @@ jobs:
         uses: aws-actions/amazon-ecr-login@v2
 
       - name: Build Docker image
+        working-directory: app
         run: |
           docker build \
             -t ${{ secrets.ECR_REPOSITORY }}:${IMAGE_TAG} \
