--- a/.github/workflows/Iac.yaml
+++ b/.github/workflows/Iac.yaml
@@ -65,7 +65,10 @@ jobs:
           working_directory: terraform
 
       - name: Terraform Plan
-        run: terraform plan
+        run: terraform plan 
+
+      - name: unlocking state
+        run: terraform force-unlock 5574ad7c-4158-e732-13c9-78dfe66a3c7b
 
       - name: Terraform Apply
         run: terraform apply -auto-approve
