Updated tags in TF and added migration.yaml

--- a/.github/workflows/migration.yaml
+++ b/.github/workflows/migration.yaml
@@ -3,6 +3,10 @@ name: DB Migration (Manual)
 on:
   workflow_dispatch:
 
+permissions:
+  contents: read
+  id-token: write
+
 jobs:
   migrate:
     runs-on: ubuntu-latest
