--- a/.github/workflows/migration.yaml
+++ b/.github/workflows/migration.yaml
@@ -79,15 +79,10 @@ jobs:
 
 
       - name: Run DB Migration Task
-        uses: aws-actions/amazon-ecs-deploy-task-definition@v1
-        with:
-          cluster: ${{ secrets.ECS_CLUSTER_NAME }}
-          task-definition: genea-db-migration
-          launch-type: EC2
-          run-task: true
-          network-configuration: >
-            awsvpcConfiguration={
-              subnets=[${{ vars.PRIVATE_SUBNET_IDS }}],
-              securityGroups=[${{ vars.ECS_TASK_SG_ID }}],
-              assignPublicIp=DISABLED
-            }
+        run: |
+          aws ecs run-task \
+            --cluster ${{ vars.ECS_CLUSTER_NAME }} \
+            --launch-type EC2 \
+            --task-definition genea-db-migration \
+            --network-configuration "awsvpcConfiguration={subnets=[${{ vars.PRIVATE_SUBNET_IDS }}],securityGroups=[${{ vars.ECS_TASK_SG_ID }}],assignPublicIp=DISABLED}" \
+            --count 1
