--- a/.github/workflows/Iac.yaml
+++ b/.github/workflows/Iac.yaml
@@ -58,9 +58,11 @@ jobs:
         run: |
           tflint --init
           tflint
-
+          
       - name: Run tfsec
         uses: aquasecurity/tfsec-action@v1.0.3
+        env:
+            GITHUB_TOKEN: ${{ secrets.TOKEN }}
         with:
           working_directory: terraform
 
